# api_demo_server

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml  rockcraft.yaml  spread.yaml  start_docker.sh
.github/: check-conventional-pr-title.py  ci.yaml  dependabot.yaml  dependabot.yml
.github/skills/release/: SKILL.md
.github/workflows/: build-dry-run.yaml  build.yaml  cve-scan.yaml  dependency-review.yaml  image.yaml  integration-test.yaml  lint.yaml  publish.yaml  security.yaml  validate-pr-title.yaml  version-check.yaml  zizmor.yaml
.scripts/: integration-test.sh  register-rock.sh  test-compose.sh
api_demo_server/: __init__.py  app.py  database.py
charm/: CONTRIBUTING.md  README.md  actions.yaml  config.yaml  metadata.yaml  requirements.txt  run_tests
charm/lib/charms/data_platform_libs/v0/: database_requires.py
charm/lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
charm/src/: charm.py
charm/tests/: test_charm.py
python_app/: Dockerfile  pyproject.toml
python_app/api_demo_server/: __init__.py  app.py  database.py
spread/integration-test/task/: task.yaml
spread/test-compose/task/: task.yaml
src/api_demo_server/: database.py
