[project]
name = "api_demo_server"
version = "2.0.0.dev0"
description = "FastAPI demo server"
authors = [
    { name = "The Charm Tech team at Canonical Ltd." },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "python-multipart==0.0.31",
    "psycopg2-binary==2.9.12",
    "starlette==1.3.1",
    "starlette_exporter==0.23.0"
]

[dependency-groups]
dev = [
    "pip-audit>=2.9,<3",
    "ruff>=0.15.14,<1",
    "ty>=0.0.39,<1",
]

[build-system]
requires = [
    "uv_build>=0.11.16,<1",
]
build-backend = "uv_build"

[tool.flit.module]
name = "api_demo_server"

[tool.ruff]
line-length = 99
