[project]
name = "api_demo_server"
version = "2.0.0"
description = "FastAPI demo server"
authors = [
    { name = "The Charm Tech team at Canonical Ltd." },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.138.2",
    "uvicorn==0.49.0",
    "python-multipart==0.0.32",
    "psycopg2-binary==2.9.12",
    "starlette==1.3.1",
    "starlette_exporter==0.23.0"
]

[dependency-groups]
dev = [
    "pip-audit>=2.9,<3",
    "ruff>=0.15.20,<1",
    "ty>=0.0.55,<1",
]

[build-system]
requires = [
    "uv_build>=0.11.16,<1",
]
build-backend = "uv_build"

[tool.ruff]
line-length = 99

[tool.uv]
# Rolling quarantine: never resolve against packages published in the last 7
# days, so a compromised release has a window to be caught/yanked upstream
# before it can reach this project via a manual `uv add`, a `uv lock` regen,
# a uvx bootstrap, or a CI re-resolve. Complements (doesn't replace) the
# Dependabot cooldown, which only protects Dependabot-authored PRs.
exclude-newer = "7 days"
